--- a/docs/docs-ref-autogen/word_1_3/word/word.body.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.body.yml
@@ -377,11 +377,11 @@ items:
           ```
       parameters:
         - id: breakType
-          description: 必需。 要添加到正文的分隔符类型。
+          description: 必填。 要添加到正文的分隔符类型。
           type:
             - 'word!Word.BreakType:enum'
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertBreak:member(2)'
@@ -402,11 +402,11 @@ items:
         description: ''
       parameters:
         - id: breakTypeString
-          description: 必需。 要添加到正文的分隔符类型。
+          description: 必填。 要添加到正文的分隔符类型。
           type:
             - '"Page" | "Next" | "SectionNext" | "SectionContinuous" | "SectionEven" | "SectionOdd" | "Line"'
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertContentControl:member(1)'
@@ -498,7 +498,7 @@ items:
           ```
       parameters:
         - id: base64File
-          description: 必需。 .Docx 文件的 base64 编码内容。
+          description: 必填。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocation
@@ -523,7 +523,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .Docx 文件的 base64 编码内容。
+          description: 必填。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocationString
@@ -576,7 +576,7 @@ items:
           ```
       parameters:
         - id: html
-          description: 必需。 要插入到文档中的 HTML。
+          description: 必填。 要插入到文档中的 HTML。
           type:
             - string
         - id: insertLocation
@@ -601,7 +601,7 @@ items:
         description: ''
       parameters:
         - id: html
-          description: 必需。 要插入到文档中的 HTML。
+          description: 必填。 要插入到文档中的 HTML。
           type:
             - string
         - id: insertLocationString
@@ -659,11 +659,11 @@ items:
           ```
       parameters:
         - id: base64EncodedImage
-          description: 必需。 将 base64 编码的图像插入正文中。
+          description: 必填。 将 base64 编码的图像插入正文中。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertInlinePictureFromBase64:member(2)'
@@ -684,11 +684,11 @@ items:
         description: ''
       parameters:
         - id: base64EncodedImage
-          description: 必需。 将 base64 编码的图像插入正文中。
+          description: 必填。 将 base64 编码的图像插入正文中。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertOoxml:member(1)'
@@ -709,7 +709,7 @@ items:
         description: ''
       parameters:
         - id: ooxml
-          description: 必需。 要插入的 OOXML。
+          description: 必填。 要插入的 OOXML。
           type:
             - string
         - id: insertLocation
@@ -734,11 +734,11 @@ items:
         description: ''
       parameters:
         - id: ooxml
-          description: 必需。 要插入的 OOXML。
+          description: 必填。 要插入的 OOXML。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertParagraph:member(1)'
@@ -789,11 +789,11 @@ items:
           ```
       parameters:
         - id: paragraphText
-          description: 必需。 要插入的段落文本。
+          description: 必填。 要插入的段落文本。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertParagraph:member(2)'
@@ -814,11 +814,11 @@ items:
         description: ''
       parameters:
         - id: paragraphText
-          description: 必需。 要插入的段落文本。
+          description: 必填。 要插入的段落文本。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#insertTable:member(1)'
@@ -858,15 +858,15 @@ items:
           ```
       parameters:
         - id: rowCount
-          description: 必需。 表格的行数。
+          description: 必填。 表格的行数。
           type:
             - number
         - id: columnCount
-          description: 必需。 表格的列数。
+          description: 必填。 表格的列数。
           type:
             - number
         - id: insertLocation
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
         - id: values
@@ -891,15 +891,15 @@ items:
         description: ''
       parameters:
         - id: rowCount
-          description: 必需。 表格的行数。
+          description: 必填。 表格的行数。
           type:
             - number
         - id: columnCount
-          description: 必需。 表格的列数。
+          description: 必填。 表格的列数。
           type:
             - number
         - id: insertLocationString
-          description: 必需。 此值可以为“Start”或“End”。
+          description: 必填。 此值可以为“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
         - id: values
@@ -951,11 +951,11 @@ items:
           ```
       parameters:
         - id: text
-          description: 必需。 要插入的文本。
+          description: 必填。 要插入的文本。
           type:
             - string
         - id: insertLocation
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.Body#insertText:member(2)'
@@ -976,11 +976,11 @@ items:
         description: ''
       parameters:
         - id: text
-          description: 必需。 要插入的文本。
+          description: 必填。 要插入的文本。
           type:
             - string
         - id: insertLocationString
-          description: 必需。 此值可以为“Replace”、“Start”或“End”。
+          description: 必填。 此值可以为“Replace”、“Start”或“End”。
           type:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.Body#lists:member'
@@ -999,21 +999,29 @@ items:
         type:
           - 'word!Word.ListCollection:class'
   - uid: 'word!Word.Body#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
-    name: load(options)
-    fullName: load(options)
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
+    remarks: |-
+      除了此签名之外，此方法还具有以下签名：
+
+      `load(option?: string | string[]): Word.Body`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+
+      `load(option?: { select?: string; expand?: string; }): Word.Body`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Body`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+    name: load(option)
+    fullName: load(option)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(options?: Word.Interfaces.BodyLoadOptions): Word.Body;'
+      content: 'load(option?: Word.Interfaces.BodyLoadOptions): Word.Body;'
       return:
         type:
           - 'word!Word.Body:class'
         description: ''
       parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
+        - id: option
+          description: ''
           type:
             - 'word!Word.Interfaces.BodyLoadOptions:interface'
   - uid: 'word!Word.Body#load:member(2)'
@@ -1042,24 +1050,16 @@ items:
       - typeScript
     type: method
     syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
-                    select?: string;
-                    expand?: string;
-                }): Word.Body;
+      content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Word.Body;'
       return:
         type:
           - 'word!Word.Body:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
+            - '{ select?: string; expand?: string; }'
   - uid: 'word!Word.Body#paragraphs:member'
     summary: |-
       获取正文中段落对象的集合。 只读。
@@ -1144,7 +1144,7 @@ items:
           - 'word!Word.Body:class'
   - uid: 'word!Word.Body#parentBodyOrNullObject:member'
     summary: |-
-      Gets the parent body of the body. For example, a table cell body's parent body could be a header. Returns a null object if there isn't a parent body. Read-only.
+      获取 body 的父正文。例如，表格单元格 body 的父正文可能是标题。如果不存在父正文控件，则返回一个 Null 对象。只读。
 
       \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentBodyOrNullObject
@@ -1453,7 +1453,7 @@ items:
             - 'word!Word.Body:class'
   - uid: 'word!Word.Body#style:member'
     summary: |-
-      Gets or sets the style name for the body. Use this property for custom styles and localized style names. To use the built-in styles that are portable between locales, see the "styleBuiltIn" property.
+      获取或设置 body 的样式名称。请对自定义样式和本地化样式名称使用此属性。若要使用可以在区域设置之间移植的嵌入样式，请参阅“styleBuiltIn”属性。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: style
@@ -1468,7 +1468,7 @@ items:
           - string
   - uid: 'word!Word.Body#styleBuiltIn:member'
     summary: |-
-      Gets or sets the built-in style name for the body. Use this property for built-in styles that are portable between locales. To use custom styles or localized style names, see the "style" property.
+      获取或设置 body 的嵌入样式名称。请对可以在区域设置之间移植的嵌入样式使用此属性。若要使用自定义样式或本地化样式名称，请参阅“style”属性。
 
       \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: styleBuiltIn
@@ -1554,7 +1554,7 @@ items:
           - 'word!Word.Interfaces.BodyData:interface'
         description: ''
   - uid: 'word!Word.Body#track:member(1)'
-    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是的简写`context.trackedObjects.add(thisObject)`<!-- -->. 如果要在多个调用中使用此对象 `.sync` ，并在 "运行" 批处理的顺序执行之外使用此对象，并在设置属性或对对象调用方法时获取 "InvalidObjectPath" 错误，则需要在首次创建对象时将该对象添加到跟踪的对象集合中。
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -1582,7 +1582,7 @@ items:
         type:
           - 'word!Word.Body#type~0:complex'
   - uid: 'word!Word.Body#untrack:member(1)'
-    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是的简写`context.trackedObjects.remove(thisObject)`<!-- -->. 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在 `context.sync()` 内存释放生效之前，您需要调用该过程。
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
