--- a/docs/docs-ref-autogen/word/word/word.selectionmode.yml
+++ b/docs/docs-ref-autogen/word/word/word.selectionmode.yml
@@ -1,7 +1,10 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.SelectionMode:enum'
-    summary: '<span data-ttu-id="a0df9-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a0df9-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: |-
+      此枚举设置文档中的光标（插入点）在选定内容之后的位置。
+
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.SelectionMode
     fullName: Word.SelectionMode
     langs:
@@ -13,6 +16,7 @@ items:
       - 'word!Word.SelectionMode.select:member'
       - 'word!Word.SelectionMode.start:member'
   - uid: 'word!Word.SelectionMode.end:member'
+    summary: 光标位于选定区域的末尾（紧接在选定区域的末尾之后）。
     name: end
     fullName: end
     langs:
@@ -20,6 +24,7 @@ items:
     type: field
     numericValue: '"End"'
   - uid: 'word!Word.SelectionMode.select:member'
+    summary: 整个区域处于选中状态。
     name: select
     fullName: select
     langs:
@@ -27,6 +32,7 @@ items:
     type: field
     numericValue: '"Select"'
   - uid: 'word!Word.SelectionMode.start:member'
+    summary: 光标位于选定区域的开头（恰好在选定区域的开头之前）。
     name: start
     fullName: start
     langs:
