commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.slicer.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.slicer.yml
@@ -200,7 +200,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.Slicer#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -218,7 +218,7 @@ items:
           type:
             - 'excel!Excel.Interfaces.SlicerLoadOptions:interface'
   - uid: 'excel!Excel.Slicer#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -236,7 +236,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Slicer#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -254,7 +254,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -381,14 +381,14 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'setStyle(style: string | PivotTableStyle | BuiltInSlicerStyle): void;'
+      content: 'setStyle(style: string | SlicerStyle | BuiltInSlicerStyle): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: style
-          description: 要应用于数据透视表的样式。 如果`InvalidArgumentException`提供的字符串与任何样式的名称都不匹配，则会引发此异常。
+          description: 要应用于切片器的样式。 `InvalidArgumentException`如果提供的字符串与任何样式的名称都不匹配，则会引发此异常。
           type:
             - 'excel!Excel.Slicer#setStyle~0:complex'
   - uid: 'excel!Excel.Slicer#slicerItems:member'
@@ -466,7 +466,7 @@ items:
           });
           ```
   - uid: 'excel!Excel.Slicer#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 切片器对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.SlicerData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 Excel 切片器对象是 API 对象，但 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.SlicerData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -546,14 +546,14 @@ references:
   - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Slicer#setStyle~0:complex'
-    name: string | PivotTableStyle | BuiltInSlicerStyle
-    fullName: string | Excel.PivotTableStyle | Excel.BuiltInSlicerStyle
+    name: string | SlicerStyle | BuiltInSlicerStyle
+    fullName: string | Excel.SlicerStyle | Excel.BuiltInSlicerStyle
     spec.typeScript:
       - name: 'string | '
         fullName: 'string | '
-      - uid: 'excel!Excel.PivotTableStyle:class'
-        name: PivotTableStyle
-        fullName: Excel.PivotTableStyle
+      - uid: 'excel!Excel.SlicerStyle:class'
+        name: SlicerStyle
+        fullName: Excel.SlicerStyle
       - name: ' | '
         fullName: ' | '
       - uid: 'excel!Excel.BuiltInSlicerStyle:enum'
