--- a/docs/docs-ref-autogen/excel/excel/excel.table.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.table.yml
@@ -397,7 +397,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.Table#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -415,7 +415,7 @@ items:
           type:
             - 'excel!Excel.Interfaces.TableLoadOptions:interface'
   - uid: 'excel!Excel.Table#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -469,7 +469,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Table#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -487,7 +487,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -664,7 +664,7 @@ items:
             - 'excel!Excel.Table:class'
   - uid: 'excel!Excel.Table#setStyle:member(1)'
     summary: |-
-      设置应用于切片器的样式。
+      设置应用于表的样式。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -674,14 +674,14 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'setStyle(style: string | PivotTableStyle | BuiltInTableStyle): void;'
+      content: 'setStyle(style: string | TableStyle | BuiltInTableStyle): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: style
-          description: 要应用于数据透视表的样式。 如果`InvalidArgumentException`提供的字符串与任何样式的名称都不匹配，则会引发此异常。
+          description: 要应用于表的样式。 `InvalidArgumentException`如果提供的字符串与任何样式的名称都不匹配，则会引发此异常。
           type:
             - 'excel!Excel.Table#setStyle~0:complex'
   - uid: 'excel!Excel.Table#showBandedColumns:member'
@@ -830,7 +830,7 @@ items:
         type:
           - 'excel!Excel.TableStyle:class'
   - uid: 'excel!Excel.Table#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 表对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.TableData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 Excel 表对象是 API 对象，但 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.TableData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -921,14 +921,14 @@ references:
   - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Table#setStyle~0:complex'
-    name: string | PivotTableStyle | BuiltInTableStyle
-    fullName: string | Excel.PivotTableStyle | Excel.BuiltInTableStyle
+    name: string | TableStyle | BuiltInTableStyle
+    fullName: string | Excel.TableStyle | Excel.BuiltInTableStyle
     spec.typeScript:
       - name: 'string | '
         fullName: 'string | '
-      - uid: 'excel!Excel.PivotTableStyle:class'
-        name: PivotTableStyle
-        fullName: Excel.PivotTableStyle
+      - uid: 'excel!Excel.TableStyle:class'
+        name: TableStyle
+        fullName: Excel.TableStyle
       - name: ' | '
         fullName: ' | '
       - uid: 'excel!Excel.BuiltInTableStyle:enum'
