--- a/docs/docs-ref-autogen/outlook/toc.yml
+++ b/docs/docs-ref-autogen/outlook/toc.yml
@@ -8,6 +8,8 @@ items:
         items:
           - name: MailboxEnums
             items:
+              - name: ActionType
+                uid: 'outlook!Office.MailboxEnums.ActionType:enum'
               - name: AppointmentSensitivityType
                 uid: 'outlook!Office.MailboxEnums.AppointmentSensitivityType:enum'
               - name: AttachmentContentFormat
@@ -64,7 +66,7 @@ items:
             uid: 'outlook!Office.AttachmentDetailsCompose:interface'
           - name: AttachmentsChangedEventArgs
             uid: 'outlook!Office.AttachmentsChangedEventArgs:interface'
-          - name: 正文
+          - name: Body
             uid: 'outlook!Office.Body:interface'
           - name: 类别
             uid: 'outlook!Office.Categories:interface'
@@ -76,11 +78,11 @@ items:
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
-          - name: 过程
+          - name: Diagnostics
             uid: 'outlook!Office.Diagnostics:interface'
           - name: EmailAddressDetails
             uid: 'outlook!Office.EmailAddressDetails:interface'
-          - name: Emailuser.displayname
+          - name: EmailUser
             uid: 'outlook!Office.EmailUser:interface'
           - name: EnhancedLocation
             uid: 'outlook!Office.EnhancedLocation:interface'
@@ -94,7 +96,7 @@ items:
             uid: 'outlook!Office.InternetHeaders:interface'
           - name: IsAllDayEvent
             uid: 'outlook!Office.IsAllDayEvent:interface'
-          - name: 项目
+          - name: Item
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -114,6 +116,8 @@ items:
             uid: 'outlook!Office.MessageCompose:interface'
           - name: Messageread.html
             uid: 'outlook!Office.MessageRead:interface'
+          - name: NotificationMessageAction
+            uid: 'outlook!Office.NotificationMessageAction:interface'
           - name: NotificationMessageDetails
             uid: 'outlook!Office.NotificationMessageDetails:interface'
           - name: NotificationMessages
@@ -124,7 +128,7 @@ items:
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: Recipients
+          - name: 收件人
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -226,7 +230,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: 源
+                  - name: Source
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
