--- a/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.itemnotificationmessagetype.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.itemnotificationmessagetype.yml
@@ -5,7 +5,7 @@ items:
       为约会或邮件指定通知邮件类型。
 
       \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读'
+    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读'
     name: Office.MailboxEnums.ItemNotificationMessageType
     fullName: Office.MailboxEnums.ItemNotificationMessageType
     langs:
@@ -15,6 +15,7 @@ items:
     children:
       - 'outlook!Office.MailboxEnums.ItemNotificationMessageType.ErrorMessage:member'
       - 'outlook!Office.MailboxEnums.ItemNotificationMessageType.InformationalMessage:member'
+      - 'outlook!Office.MailboxEnums.ItemNotificationMessageType.InsightMessage:member'
       - 'outlook!Office.MailboxEnums.ItemNotificationMessageType.ProgressIndicator:member'
   - uid: 'outlook!Office.MailboxEnums.ItemNotificationMessageType.ErrorMessage:member'
     summary: 通知消息是一条错误消息。
@@ -32,6 +33,18 @@ items:
       - typeScript
     type: field
     numericValue: '"informationalMessage"'
+  - uid: 'outlook!Office.MailboxEnums.ItemNotificationMessageType.InsightMessage:member'
+    summary: |-
+      通知消息是包含操作的信息性消息。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
+    name: InsightMessage
+    fullName: InsightMessage
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"insightMessage"'
   - uid: 'outlook!Office.MailboxEnums.ItemNotificationMessageType.ProgressIndicator:member'
     summary: 通知消息是一个进度指示器。
     name: ProgressIndicator
