--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.notificationmessagedetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.notificationmessagedetails.yml
@@ -6,9 +6,9 @@ items:
 
       \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
     name: Office.NotificationMessageDetails
     fullName: Office.NotificationMessageDetails
     langs:
@@ -61,7 +61,7 @@ items:
         type:
           - string
   - uid: 'outlook!Office.NotificationMessageDetails#persistent:member'
-    summary: 仅当类型为时适用`InformationalMessage`<!-- -->. 如果为 true，则邮件将一直保留到此加载项删除或由用户解除。 如果为 false，则当用户导航到其他项目时将其删除。 对于错误通知，邮件将一直保留，直到用户看过一次。 为不受支持的类型指定此参数将引发异常。
+    summary: 指定邮件是否应为永久性。 仅当类型为时适用`InformationalMessage`<!-- -->. 如果为 true，则邮件将一直保留到此加载项删除或由用户解除。 如果为 false，则当用户导航到其他项目时将其删除。 对于错误通知，邮件将一直保留，直到用户看过一次。 为不受支持的类型指定此参数将引发异常。
     name: persistent
     fullName: persistent
     langs:
@@ -73,7 +73,12 @@ items:
         type:
           - '!Boolean:interface'
   - uid: 'outlook!Office.NotificationMessageDetails#type:member'
-    summary: '`ItemNotificationMessageType`指定邮件。 如果 type 为`ProgressIndicator`或`ErrorMessage`<!-- -->，将自动提供图标，并且邮件不是永久性的。 因此，图标和持久性的属性对于这些类型的邮件都是无效的。 包括它们将导致`ArgumentException`<!-- -->. 如果 type 为`ProgressIndicator`<!-- -->，开发人员应在操作完成时删除或替换进度指示器。'
+    summary: |-
+      指定 `ItemNotificationMessageType` 邮件。
+
+      如果 type 为 `ProgressIndicator` 或`ErrorMessage`<!-- -->，将自动提供图标，并且邮件不是永久性的。 因此，图标和持久性的属性对于这些类型的邮件都是无效的。 包括它们将导致`ArgumentException`<!-- -->.
+
+      如果 type 为`ProgressIndicator`<!-- -->，开发人员应在操作完成时删除或替换进度指示器。
     name: type
     fullName: type
     langs:
